--- a/crypto/123.md
+++ b/crypto/123.md
@@ -1,1 +1,13 @@
-123
+Условие:
+
+Взгляните на эту строку. Она странная.
+Сообщение: ZmxhZ2lzVzBXdGhpc2lzQkFTRTY0Cg==
+
+Ответ:
+
+flagisW0WthisisBASE64
+
+Решение:
+
+По названию таска и явным признакам используется base64.
+1) В терминале вводим: base64 -d 1.txt. Где в 1.txt лежит наше сообщение.
